# anorm-utils

./: CMakeLists.txt  PreLoad.cmake  README.md
src/: word.cpp
